--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
-    "ethers": "^6.15.0"
+    "ethers": "^6.15.0",
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
